# canviewer

./: CMakeLists.txt  Doxyfile
cmake/: tests.cmake
src/: application.cpp  application.hpp  buildconfig.hpp.in  can_decoder.cpp  can_decoder.hpp  file_source.cpp  file_source.hpp  frame.hpp  main.cpp  sample.hpp  socketcan_source.cpp  socketcan_source.hpp  source_interface.hpp
src/ui/: frames_model.cpp  frames_model.hpp  window.cpp  window.hpp  window.ui
